--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <span class="icon-bar"></span>
         </button>
 
-                <a class="logo" href="#hero">
+              <a class="logo" data-scroll="scrollTo" href="#hero">
         <img class="logo-dark" src="assets/images/logo/leuchten.png" alt="Logo">
         <img class="logo-light" src="assets/images/logo/orion.png" alt="Logo">
         
