--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <span class="icon-bar"></span>
         </button>
 
-              <a class="logo" data-scroll="scrollTo" href="#hero">
+              <a class="logo" data-scroll="scrollTo" href="https://www.svitidla-orion.cz/">
         <img class="logo-dark" src="assets/images/logo/leuchten.png" alt="Logo">
         <img class="logo-light" src="assets/images/logo/orion.png" alt="Logo">
         
@@ -340,6 +340,9 @@
                     <div class="widget--social text-right text-center-xs">
                         <a class="facebook" href="https://www.facebook.com/OrionSvitidla">
                             <i class="fa fa-facebook"></i>
+                        </a>
+			<a class="facebook" href="https://www.svitidla-orion.cz/">
+                            <i class="fa fa-globe" aria-hidden="true"></i>
                         </a>
                        
                     </div>
